--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             </div>
         </div>
     </div>
-    <div id="win-message" style="display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); z-index:1000; display:flex; align-items:center; justify-content:center;">
-        <div style="background:#fff; color:#222; padding:40px 60px; border-radius:16px; box-shadow:0 8px 32px #000a; text-align:center; min-width:300px;">
-            <h2>Gewonnen!</h2>
-            <div style="margin-top:24px; display:flex; gap:24px; justify-content:center;">
-                <button id="retryBtn">Opnieuw</button>
-                <button id="nextLevelBtn">Volgend level</button>
+    <div id="win-message" style="display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); z-index:1000;">
+        <div style="display:flex; align-items:center; justify-content:center; width:100%; height:100%;">
+            <div style="background:#fff; color:#222; padding:40px 60px; border-radius:16px; box-shadow:0 8px 32px #000a; text-align:center; min-width:300px;">
+                <h2>Gewonnen!</h2>
+                <div style="margin-top:24px; display:flex; gap:24px; justify-content:center;">
+                    <button id="retryBtn">Opnieuw</button>
+                    <button id="nextLevelBtn">Volgend level</button>
+                </div>
             </div>
         </div>
     </div>
