--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </div>
     <script src="Assets/Scripts/Car.js"></script>
     <script src="Assets/Scripts/level.js"></script>
-    <script src="Assets/Scripts/interpreter.js"></script>
+    <script src="Assets/Scripts/parser.js"></script>
+    <script src="Assets/Scripts/carlang-interpreter.js"></script>
     <script src="Assets/Scripts/game.js"></script>
 </body>
 </html>
