Added debug, etc.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <div class="container">
         <div id="game"></div>
         <div class="right-panel">
-            <textarea id="code" spellcheck="false"></textarea>
+            <div class="code-container">
+                <textarea id="code" spellcheck="false"></textarea>
+                <div id="parser-display" class="parser-display"></div>
+            </div>
             <div class="button-row">
                 <button id="saveBtn">Save</button>
                 <button id="loadBtn">Load</button>
+                <button id="checkCodeBtn">Check Code</button>
                 <button id="playBtn">Play</button>
                 <button id="resetBtn">Reset</button>
             </div>
@@ -33,8 +37,9 @@
     </div>
     <script src="Assets/Scripts/Car.js"></script>
     <script src="Assets/Scripts/level.js"></script>
-    <script src="Assets/Scripts/parser.js"></script>
-    <script src="Assets/Scripts/carlang-interpreter.js"></script>
+    <script src="Assets/Scripts/ui-parser.js"></script>
+    <script src="Assets/Scripts/ast-execution.js"></script>
+    <script src="Assets/Scripts/CarLang-Parser.js"></script>
     <script src="Assets/Scripts/game.js"></script>
 </body>
 </html>
