--- a/parser-test.html
+++ b/parser-test.html
@@ -103,7 +103,7 @@ for (int i = 0; i < 3; i = i + 1) {
         </div>
     </div>
 
-    <script src="Assets/Scripts/parser.js"></script>
+    <script src="Assets/Scripts/carlang-parser.js"></script>
     <script src="Assets/Scripts/parser-test.js"></script>
     <script>
         function parseCode() {
