Added home button and started working on levels

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="right-panel">
             <div class="code-container">
                 <div class="button-row">
+                    <button id="homeBtn">Home</button>
                     <button id="infoBtn">Info</button>
                     <button id="saveBtn">Save</button>
                     <button id="loadBtn">Load</button>
