Indentation is now automatic on { and }, added a fix indentation button that fixes existing code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <button id="saveBtn">Save</button>
                     <button id="loadBtn">Load</button>
                     <button id="checkCodeBtn">Check Code</button>
+                    <button id="fixIndentationBtn">Fix Indentation</button>
                     <button id="playBtn">Play</button>
                     <button id="resetBtn">Reset</button>
                 </div>
