--- a/levelCreator.html
+++ b/levelCreator.html
@@ -21,6 +21,7 @@
                 <div class="button-row">
                     <button id="showJsonBtn">Show JSON</button>
                     <button id="loadJsonBtn">Load JSON</button>
+                    <button id="fixIndentationBtn">Fix Indentation</button>
                 </div>
                 <label>Level JSON:</label>
                 <textarea id="jsonArea"></textarea>
