Hmm, did too much; fixed null-parsing of comments, levelCreator, turnLeft & right & animation...

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2>Gewonnen!</h2>
                 <div style="margin-top:24px; display:flex; gap:24px; justify-content:center;">
                     <button id="retryBtn">Opnieuw</button>
-                    <button id="nextLevelBtn">Volgend level</button>
+                    <button id="nextLevelBtn">Level select</button>
                 </div>
             </div>
         </div>
@@ -54,7 +54,8 @@
                 <ul>
                     <li><code>moveForward()</code> - rijdt vooruit</li>
                     <li><code>moveBackward()</code> - rijdt achteruit</li>
-                    <li><code>rotate(degrees)</code> - draait de auto naar links of rechts. Degree moet 90, 180 of 270 zijn.</li>
+                    <li><code>turnRight()</code> - draait de auto naar rechts met 90 graden.</li>
+                    <li><code>turnLeft()</code> - draait de auto naar links met 90 graden.</li>
                     <li><code>canMove()</code> - controleert of de auto vooruit kan bewegen</li>
                     <li><code>if (condition) { ... }</code> - voert code uit als de conditie waar is</li>
                     <li><code>while (condition) { ... }</code> - voert code uit zolang de conditie waar is</li>
