--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <button id="playBtn">Play</button>
                     <button id="resetBtn">Reset</button>
                 </div>
+                <div id="instructions"></div>
                 <textarea id="code" spellcheck="false"></textarea>
                 <div id="parser-display" class="parser-display"></div>
             </div>
