--- a/levelCreator.html
+++ b/levelCreator.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <h1>Level Creator</h1>
+        <p>Note: Very experimental, not all features are implemented yet, use at your own risk.</p>
         <div class="flex-row">
             <div class="form-section">
                 <label>Breedte (kolommen): <input type="number" id="width" min="1" value="4"></label>
