Got the cow in the code

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             </div>
         </div>
     </div>
+    <script src="Assets/Scripts/soundController.js"></script>
+    <script src="Assets/Scripts/Cow.js"></script>
     <script src="Assets/Scripts/Car.js"></script>
     <script src="Assets/Scripts/level.js"></script>
     <script src="Assets/Scripts/code-validator.js"></script>
