--- a/levelCreator.html
+++ b/levelCreator.html
@@ -37,6 +37,7 @@
                 <div style="margin-bottom: 16px;">
                     <span id="carIcon" class="car-icon" style="background-image:url('Assets/Textures/Car.png');" title="Plaats auto"></span>
                     <span id="finishIcon" class="finish-icon" style="background-image:url('Assets/Textures/Finish.png');" title="Plaats finish"></span>
+                    <span id="cowIcon" class="cow-icon" style="background-image:url('Assets/Textures/Cow.png');" title="Plaats koe (optioneel)"></span>
                 </div>
                 <div id="levelGrid" class="level-grid"></div>
             </div>
