--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                     <button id="resetBtn">Reset</button>
                 </div>
                 <div id="instructions"></div>
-                <div id="code-editor-container" style="position: relative; background: #23272b; border: 2px solid #333; border-radius: 8px; font-family: 'Fira Mono', 'Consolas', monospace; font-size: 1rem;">
-                    <div id="line-numbers" style="position: absolute; left: 0; top: 0; width: 40px; background: #1a1e22; color: #666; padding: 12px 8px; border-right: 1px solid #333; border-radius: 6px 0 0 6px; font-size: 0.78rem; line-height: 1.4; user-select: none; z-index: 1;"></div>
-                    <textarea id="code" spellcheck="false" style="margin-left: 60px; width: calc(100% - 60px); height: 500px; background: #23272b; color: #e0e0e0; border: none; border-radius: 0 6px 6px 0; font-family: 'Fira Mono', 'Consolas', monospace; font-size: 1rem; padding: 12px; resize: none; line-height: 1.4; outline: none;"></textarea>
+                <div id="code-editor-container">
+                    <div id="line-numbers"></div>
+                    <textarea id="code" spellcheck="false"></textarea>
                 </div>
                 <div id="parser-display" class="parser-display"></div>
             </div>
         </div>
     </div>
-    <div id="win-message" style="display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); z-index:1000;">
-        <div style="display:flex; align-items:center; justify-content:center; width:100%; height:100%;">
-            <div style="background:#fff; color:#222; padding:40px 60px; border-radius:16px; box-shadow:0 8px 32px #000a; text-align:center; min-width:300px;">
+    <div id="win-message">
+        <div class="win-message-content">
+            <div class="win-message-modal">
                 <h2>Gewonnen!</h2>
-                <div style="margin-top:24px; display:flex; gap:24px; justify-content:center;">
+                <div class="win-message-buttons">
                     <button id="retryBtn">Opnieuw</button>
                     <button id="nextLevelBtn">Level select</button>
                 </div>
