Fixed reset; some lvl work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <button id="checkCodeBtn">Check Code</button>
                     <button id="fixIndentationBtn">Fix Indentation</button>
                     <button id="playBtn">Play</button>
-                    <button id="resetBtn">Reset</button>
+                    <button id="resetLvlBtn">Reset level</button>
+                    <button id="resetBtn">Reset code</button>
                 </div>
                 <div id="instructions"></div>
                 <div id="code-editor-container">
