Almost working, just some ui errors that no AI can explain

--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
     </div>
     
     <!-- Scripts -->
-    <script src="Assets/Scripts/soundController.js"></script>
-    <script src="Assets/Scripts/Cow.js"></script>
-    <script src="Assets/Scripts/Car.js"></script>
-    <script src="Assets/Scripts/level.js"></script>
-    <script src="Assets/Scripts/code-validator.js"></script>
-    <script src="Assets/Scripts/carlang-engine.js"></script>
-    <script src="Assets/Scripts/CarLang-parser.js"></script>
-    <script src="Assets/Scripts/game.js"></script>
+    <script type="module" src="Assets/Scripts/soundController.js"></script>
+    <script type="module" src="Assets/Scripts/Cow.js"></script>
+    <script type="module" src="Assets/Scripts/Car.js"></script>
+    <script type="module" src="Assets/Scripts/level.js"></script>
+    <script type="module" src="Assets/Scripts/code-validator.js"></script>
+    <script type="module" src="Assets/Scripts/carlang-engine.js"></script>
+    <script type="module" src="Assets/Scripts/CarLang-parser.js"></script>
+    <script type="module" src="Assets/Scripts/game.js"></script>
 </body>
 </html>
