--- a/levelCreator.html
+++ b/levelCreator.html
@@ -167,7 +167,7 @@
         </div>
     </div>
     
-    <script src="Assets/Scripts/mazeCreator.js"></script>
-    <script src="Assets/Scripts/levelCreator.js"></script>
+    <script type="module" src="Assets/Scripts/mazeCreator.js"></script>
+    <script type="module" src="Assets/Scripts/levelCreator.js"></script>
 </body>
 </html>
