I think (FINALLY) both ui and game use the same paths for validation... _I SAID I THINK..._

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
     </div>
     
     <!-- Scripts -->
+    <script type="module" src="Assets/Scripts/commonFunctions.js"></script>
     <script type="module" src="Assets/Scripts/soundController.js"></script>
     <script type="module" src="Assets/Scripts/Cow.js"></script>
     <script type="module" src="Assets/Scripts/Car.js"></script>
@@ -158,5 +159,6 @@
     <script type="module" src="Assets/Scripts/carlang-engine.js"></script>
     <script type="module" src="Assets/Scripts/CarLang-parser.js"></script>
     <script type="module" src="Assets/Scripts/game.js"></script>
+    <script type="module" src="Assets/Scripts/ui-code-validator.js"></script>
 </body>
 </html>
