--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=500, initial-scale=1.0">
     <title>sdRacer - Programming Game</title>
     <link rel="stylesheet" href="Assets/Styles/style.css">
+    <link rel="stylesheet" href="Assets/External/CodeMirror/codemirror.min.css">
 </head>
 <body>
     <h1>sdRacer</h1>
@@ -45,8 +46,7 @@
                         </div>
                     </div>
                     <div class="editor-body">
-                        <div id="line-numbers" class="line-numbers"></div>
-                        <textarea id="code" spellcheck="false" placeholder="// Write your CarLang code here..."></textarea>
+                        <div id="code-editor" style="height: 300px;"></div>
                     </div>
                 </div>
                 
@@ -160,5 +160,22 @@
     <script type="module" src="Assets/Scripts/CarLang-parser.js"></script>
     <script type="module" src="Assets/Scripts/game.js"></script>
     <script type="module" src="Assets/Scripts/ui-code-validator.js"></script>
+    <script src="Assets/External/CodeMirror/codemirror.min.js"></script>
+    <script type="module">
+    // Initialize CodeMirror
+    window.codeMirrorEditor = CodeMirror(document.getElementById('code-editor'), {
+        value: '',
+        lineNumbers: true,
+        mode: 'javascript', // You can change this to your language
+        theme: 'default',
+        indentUnit: 4,
+        tabSize: 4,
+        indentWithTabs: false,
+        autofocus: true,
+    });
+    // Helper to get/set code (replace all codeArea.value usage in JS with these)
+    window.getCodeValue = () => window.codeMirrorEditor.getValue();
+    window.setCodeValue = (val) => window.codeMirrorEditor.setValue(val);
+    </script>
 </body>
 </html>
