Implemented traffic lights; they don't do anything in the game yet.

--- a/levelCreator.html
+++ b/levelCreator.html
@@ -113,6 +113,7 @@
                             <span class="tool-label">Objects:</span>
                             <span id="finishIcon" class="finish-icon" title="Place Finish Line"></span>
                             <span id="cowIcon" class="cow-icon" title="Place Cow (optional)"></span>
+                            <span id="trafficLightIcon" class="traffic-light-icon" title="Place Traffic Light"></span>
                         </div>
                     </div>
                     <div class="placement-status">
