Create world button added

--- a/levelCreator.html
+++ b/levelCreator.html
@@ -26,6 +26,7 @@
                     <div class="section grid-settings">
                         <label>Width (columns): <input type="number" id="width" min="1" value="4"></label>
                         <label>Height (rows): <input type="number" id="height" min="1" value="4"></label>
+                        <button id="createLevelBtn">Create Level</button>
                         <button id="generateMazeBtn">Generate Maze</button>
                     </div>
                     
