Enhance level instructions: add default instructions and improve display logic

--- a/game.html
+++ b/game.html
@@ -13,10 +13,9 @@
             <h1>sdRacer - code your way out</h1>
         </div>
 
-        <div class="instructions">
-            <h2>Uitleg</h2>
-            <p>In dit spel is het de bedoeling dat je de auto naar de finish rijdt, door de auto te programmeren. Programmeer de auto door in het codeveld jouw code te typen en druk dan op "Play" om te kijken wat je auto doet. </p>
-            <p>Ieder level begint met een kleine hint. Kijk wat de code doet door op 'Play' te drukken. Klik op 'Help' om te zien welke commando's je kunt gebruiken, en voor meer informatie.</p>
+        <div id="instructions" class="instructions">
+            <h2>Instructions</h2>
+            <p>Loading level instructions...</p>
         </div>
         
         <div class="gameButtons">
