feat: Replace newGameStyles.css with style.css in HTML files

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sdRacer - code your way out</title>
-    <link rel="stylesheet" href="Assets/Styles/newGameStyles.css">
+    <link rel="stylesheet" href="Assets/Styles/style.css">
     <link rel="stylesheet" href="Assets/External/CodeMirror/codemirror.min.css">
 </head>
 <body>
