--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>sdRacer - Level Selector</title>
-    <link rel="stylesheet" href="Assets/Styles/newGameStyles.css">
+    <link rel="stylesheet" href="Assets/Styles/style.css">
 </head>
 <body>
     <div class="content">
