--- a/levelCreator.html
+++ b/levelCreator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Level Creator - sdRacer</title>
-    <link rel="stylesheet" href="Assets/Styles/newGameStyles.css">
+    <link rel="stylesheet" href="Assets/Styles/style.css">
 </head>
 <body>
     <div class="content">
